feat: auto qr generation for form submission and guard page scanner